Implement FG-style tag replacements with hacky javac/scalac plugins